Tasks added to export